--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,32 +1,7 @@
-# dependencies
 node_modules/
-.pnp
-.pnp.js
-
-# testing
-coverage/
-
-# production builds
 build/
 dist/
-
-# environment files
+*.log
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# editor/IDE
-.vscode/
-.DS_Store
-
-# OS/system files
-AppData/
-*.lst
-*.jtx
+__pycache__/
+*.pyc
