--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.64.0",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
