--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,11 @@
     "@testing-library/jest-dom": "^6.9.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "abab": "2.0.6",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "domexception": "4.0.0",
+    "glob": "11.0.3",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
@@ -17,6 +20,8 @@
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
+    "source-map": "0.7.6",
+    "svgo": "4.0.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
